tests/fixtures/errors/dim_mismatch_annotation.ksr
// error: declared type does not match expression
param alt: Length = 400 km;
node wrong: Mass = @alt + 100 km;
